# TaskScheduler_lib

./: CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Scheduler/: Any.hpp  Apply.hpp  CMakeLists.txt  TFutureResult.hpp  TTask.hpp  TTaskScheduler.cpp  TTaskScheduler.hpp  Tuple.hpp
tests/: CMakeLists.txt  tests.cpp
